syntax = "proto3";

option go_package = "github.com/paddyoneill/perftest-go/pkg/perftest";

package perftest;

service Perftest {
    rpc GetPort(PortRequest) returns (PortResponse) {}
    rpc StartPerftest(PerftestRequest) returns (PerftestResponse) {}
    rpc GetNic(NicRequest) returns (NicResponse) {}
}

message PortRequest {
}

message PortResponse {
    int32 value = 1;
}

message PerftestRequest {
    int32 port = 1;
}

message PerftestResponse {
    string message = 1;
}

message NicRequest {
}

message NicResponse {
    string nic = 1;
}
